// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ApiService > getQuote > gets a quote 1`] = `
{
  "amount": "10000",
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "quote": {
    "egressAmount": "2",
    "id": "string",
    "intermediateAmount": "1",
  },
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService > getQuote > gets a quote 2`] = `
[
  "/quote",
  {
    "baseURL": "https://swapperoo.org",
    "headers": {
      "X-Chainflip-Sdk-Version": "1.0-test",
    },
    "params": {
      "amount": "10000",
      "dcaEnabled": "false",
      "destAsset": "ETH",
      "destChain": "Ethereum",
      "isVaultSwap": "false",
      "srcAsset": "BTC",
      "srcChain": "Bitcoin",
    },
    "signal": undefined,
  },
]
`;

exports[`ApiService > getQuote > gets a quote for a vault swap 1`] = `
{
  "amount": "10000",
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "isVaultSwap": true,
  "quote": {
    "egressAmount": "2",
    "id": "string",
    "intermediateAmount": "1",
  },
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService > getQuote > gets a quote for a vault swap 2`] = `
[
  "/quote",
  {
    "baseURL": "https://swapperoo.org",
    "headers": {
      "X-Chainflip-Sdk-Version": "1.0-test",
    },
    "params": {
      "amount": "10000",
      "dcaEnabled": "false",
      "destAsset": "ETH",
      "destChain": "Ethereum",
      "isVaultSwap": "true",
      "srcAsset": "BTC",
      "srcChain": "Bitcoin",
    },
    "signal": undefined,
  },
]
`;

exports[`ApiService > getQuote > gets a quote with a broker commission 1`] = `
{
  "amount": "10000",
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "quote": {
    "egressAmount": "2",
    "id": "string",
    "intermediateAmount": "1",
  },
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService > getQuote > gets a quote with a broker commission 2`] = `
[
  "/quote",
  {
    "baseURL": "https://swapperoo.org",
    "headers": {
      "X-Chainflip-Sdk-Version": "1.0-test",
    },
    "params": {
      "amount": "10000",
      "brokerCommissionBps": "15",
      "dcaEnabled": "false",
      "destAsset": "ETH",
      "destChain": "Ethereum",
      "isVaultSwap": "false",
      "srcAsset": "BTC",
      "srcChain": "Bitcoin",
    },
    "signal": undefined,
  },
]
`;

exports[`ApiService > getQuoteV2 > gets a quote 1`] = `
{
  "amount": "10000",
  "dcaEnabled": false,
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "isVaultSwap": true,
  "quotes": [
    {
      "egressAmount": "2",
      "id": "string",
      "intermediateAmount": "1",
    },
  ],
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService > getQuoteV2 > gets a quote 2`] = `
[
  "/v2/quote",
  {
    "baseURL": "https://swapperoo.org",
    "headers": {
      "X-Chainflip-Sdk-Version": "1.0-test",
    },
    "params": {
      "amount": "10000",
      "dcaEnabled": "false",
      "destAsset": "ETH",
      "destChain": "Ethereum",
      "isVaultSwap": "true",
      "srcAsset": "BTC",
      "srcChain": "Bitcoin",
    },
    "signal": undefined,
  },
]
`;

exports[`ApiService > getQuoteV2 > gets a quote for a vault swap 1`] = `
{
  "amount": "10000",
  "dcaEnabled": true,
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "isVaultSwap": true,
  "quotes": [
    {
      "egressAmount": "2",
      "id": "string",
      "intermediateAmount": "1",
    },
  ],
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService > getQuoteV2 > gets a quote for a vault swap 2`] = `
[
  "/v2/quote",
  {
    "baseURL": "https://swapperoo.org",
    "headers": {
      "X-Chainflip-Sdk-Version": "1.0-test",
    },
    "params": {
      "amount": "10000",
      "dcaEnabled": "true",
      "destAsset": "ETH",
      "destChain": "Ethereum",
      "isVaultSwap": "true",
      "srcAsset": "BTC",
      "srcChain": "Bitcoin",
    },
    "signal": undefined,
  },
]
`;

exports[`ApiService > getQuoteV2 > gets a quote with a broker commission 1`] = `
{
  "amount": "10000",
  "dcaEnabled": false,
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "quotes": [
    {
      "egressAmount": "2",
      "id": "string",
      "intermediateAmount": "1",
    },
  ],
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService > getQuoteV2 > gets a quote with a broker commission 2`] = `
[
  "/v2/quote",
  {
    "baseURL": "https://swapperoo.org",
    "headers": {
      "X-Chainflip-Sdk-Version": "1.0-test",
    },
    "params": {
      "amount": "10000",
      "brokerCommissionBps": "15",
      "dcaEnabled": "false",
      "destAsset": "ETH",
      "destChain": "Ethereum",
      "isVaultSwap": "false",
      "srcAsset": "BTC",
      "srcChain": "Bitcoin",
    },
    "signal": undefined,
  },
]
`;
